--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
+    "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
