--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   },
   "dependencies": {
     "@mantine/core": "^7.6.1",
+    "@mantine/dates": "^7.6.2",
     "@mantine/hooks": "^7.6.1",
+    "@tabler/icons-react": "^3.0.2",
+    "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
+    "mantine-react-table": "2.0.0-beta.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
