--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "rm -rf .next node_modules pnpm-lock.yaml yarn.lock package-lock.json && pnpm install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.1",
     "@mantine/dates": "^7.6.2",
     "@mantine/hooks": "^7.6.1",
@@ -22,7 +23,10 @@
     "mantine-react-table": "2.0.0-beta.0",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "react-hook-form-mantine": "^3.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
