--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hook-form-mantine": "^3.1.3",
+    "reactflow": "^11.10.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
