--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/dates": "^7.6.2",
     "@mantine/hooks": "^7.6.1",
     "@tabler/icons-react": "^3.0.2",
+    "@tanstack/react-query": "^5.28.14",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
