--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
     "@mantine/dates": "^7.6.2",
     "@mantine/hooks": "^7.6.1",
     "@tabler/icons-react": "^3.0.2",
-    "@tanstack/react-query": "^5.28.14",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-next-experimental": "^5.29.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.0.25",
     "mantine-react-table": "2.0.0-beta.0",
-    "next": "14.1.1",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hook-form-mantine": "^3.1.3",
-    "reactflow": "^11.10.4",
+    "reactflow": "^11.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
     "@tanstack/eslint-plugin-query": "^5.28.11",
-    "@types/node": "^20",
+    "@types/node": "^20.12.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.4"
   }
 }
