--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^7.6.1",
     "@mantine/dates": "^7.6.2",
     "@mantine/hooks": "^7.6.1",
+    "@mantine/notifications": "^7.8.0",
     "@tabler/icons-react": "^3.0.2",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-next-experimental": "^5.29.0",
