--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.0.25",
     "mantine-react-table": "2.0.0-beta.0",
     "next": "14.1.4",
+    "next-auth": "5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
