--- a/.env.example.prod
+++ b/.env.example.prod
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API_URL=https://apipy.safwagv.com
+NEXT_PUBLIC_M1_API_URL=https://apipym1.safwagv.com
+NEXT_PUBLIC_M2_API_URL=https://apipym2.safwagv.com
 NEXT_PUBLIC_API_USERNAME=banidom
 NEXT_PUBLIC_API_PASSWORD=pass2468
