chore: try out drizzle mysql2 nextauth

--- a/.env.example.prod
+++ b/.env.example.prod
@@ -3,3 +3,5 @@ NEXT_PUBLIC_M1_API_URL=https://apipym1.safwagv.com
 NEXT_PUBLIC_M2_API_URL=https://apipym2.safwagv.com
 NEXT_PUBLIC_API_USERNAME=banidom
 NEXT_PUBLIC_API_PASSWORD=pass2468
+
+AUTH_SECRET=LTkjH2OIdwkFOusCZ/zGMt+Mz3Q2pAd73mkG5GJxgpw=
