--- a/.env.example.qa
+++ b/.env.example.qa
@@ -3,3 +3,5 @@ NEXT_PUBLIC_M1_API_URL=https://qa-apipym1.safwanet.com
 NEXT_PUBLIC_M2_API_URL=https://qa-apipym2.safwanet.com
 NEXT_PUBLIC_API_USERNAME=banidom
 NEXT_PUBLIC_API_PASSWORD=pass2468
+
+AUTH_SECRET=LTkjH2OIdwkFOusCZ/zGMt+Mz3Q2pAd73mkG5GJxgpw=
