feat: nextauth 5 beta + drizzle orm

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rm -rf .next node_modules pnpm-lock.yaml yarn.lock package-lock.json && pnpm install",
-    "db:push": "drizzle-kit push:mysql --config=drizzle.config.ts"
+    "migration:generate": "drizzle-kit generate:mysql",
+    "db:push": "drizzle-kit push:mysql",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/core": "^0.30.0",
     "@auth/drizzle-adapter": "^1.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.1",
@@ -25,12 +28,13 @@
     "@tanstack/react-query-next-experimental": "^5.29.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.9",
     "framer-motion": "^11.0.25",
     "mantine-react-table": "2.0.0-beta.0",
     "mysql2": "^3.9.7",
-    "next": "14.1.4",
-    "next-auth": "5.0.0-beta.16",
+    "next": "14.2.3",
+    "next-auth": "5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -46,8 +50,8 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.17",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint": "^9.1.1",
+    "eslint-config-next": "14.2.3",
     "fluid-tailwind": "^0.1.6",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
