--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "format": "prettier --write .",
     "clean": "rm -rf .next node_modules pnpm-lock.yaml yarn.lock package-lock.json && pnpm install",
     "migration:generate": "drizzle-kit generate:mysql",
+    "migration:drop": "drizzle-kit drop",
+    "db:pull": "drizzle-kit introspect:mysql",
     "db:push": "drizzle-kit push:mysql",
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/core": "^0.30.0",
-    "@auth/drizzle-adapter": "^1.0.0",
+    "@auth/drizzle-adapter": "^1.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.1",
     "@mantine/dates": "^7.6.2",
@@ -26,15 +27,17 @@
     "@tabler/icons-react": "^3.0.2",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-next-experimental": "^5.29.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.9",
+    "fernet-nodejs": "^1.0.6",
     "framer-motion": "^11.0.25",
     "mantine-react-table": "2.0.0-beta.0",
     "mysql2": "^3.9.7",
     "next": "14.2.3",
-    "next-auth": "5.0.0-beta.3",
+    "next-auth": "5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
