--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "react-hook-form": "^7.51.2",
     "react-hook-form-mantine": "^3.1.3",
     "reactflow": "^11.11.0",
+    "sharp": "^0.33.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
     "@tanstack/eslint-plugin-query": "^5.28.11",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
