--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hook-form-mantine": "^3.1.3",
-    "reactflow": "^11.11.0",
+    "reactflow": "^11.11.3",
     "sharp": "^0.33.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
