--- a/.env.example.prod
+++ b/.env.example.prod
@@ -6,6 +6,7 @@ NEXT_PUBLIC_API_PASSWORD=pass2468
 
 FERNET_KEY=joiyKed1p78GJQ-N2MtEdHfOZ8gzlxe4I7GEyoMTm1Q=
 
+AUTH_URL=https://flowcraft.safwagv.com
 AUTH_SECRET=LTkjH2OIdwkFOusCZ/zGMt+Mz3Q2pAd73mkG5GJxgpw=
 DRIZZLE_DATABASE_URI=mysql://dangabay_run:pass@1234@safwa-prod-mysql80-v2.c7vhjetpoof1.ap-southeast-1.rds.amazonaws.com/schinkels
 DRIZZLE_DATABASE_HOST=safwa-prod-mysql80-v2.c7vhjetpoof1.ap-southeast-1.rds.amazonaws.com
