--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form-mantine": "^3.1.3",
     "reactflow": "^11.11.3",
     "sharp": "^0.33.3",
+    "superjson": "^2.2.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
