--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@mantine/hooks": "^7.6.1",
     "@mantine/modals": "^7.8.0",
     "@mantine/notifications": "^7.8.0",
+    "@mantine/nprogress": "^7.9.2",
     "@tabler/icons-react": "^3.0.2",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-next-experimental": "^5.29.0",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
@@ -38,6 +40,7 @@
     "mysql2": "^3.9.7",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.17",
+    "onborda": "^1.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
@@ -51,6 +54,7 @@
   "devDependencies": {
     "@iconify-icon/react": "^2.0.1",
     "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.12.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
