--- a/.env.example.prod
+++ b/.env.example.prod
@@ -4,6 +4,9 @@ NEXT_PUBLIC_M2_API_URL=https://apipym2.safwagv.com
 NEXT_PUBLIC_API_USERNAME=banidom
 NEXT_PUBLIC_API_PASSWORD=pass2468
 
+NEXT_PUBLIC_IDLE_TIME=1800000
+NEXT_PUBLIC_SIGNOUT_TIME=10
+
 FERNET_KEY=joiyKed1p78GJQ-N2MtEdHfOZ8gzlxe4I7GEyoMTm1Q=
 
 AUTH_URL=https://flowcraft.safwagv.com
