--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/modals": "^7.8.0",
     "@mantine/notifications": "^7.8.0",
     "@mantine/nprogress": "^7.9.2",
+    "@mantine/spotlight": "^7.9.2",
     "@tabler/icons-react": "^3.0.2",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-next-experimental": "^5.29.0",
