--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.1",
     "@mantine/dates": "^7.6.2",
+    "@mantine/dropzone": "^7.12.1",
     "@mantine/hooks": "^7.6.1",
     "@mantine/modals": "^7.8.0",
     "@mantine/notifications": "^7.8.0",
