--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-next-experimental": "^5.51.23",
     "bcrypt": "^5.1.1",
+    "blurhash": "^2.0.5",
+    "blurhash-from-url": "^0.0.10",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
@@ -46,6 +48,7 @@
     "next-auth": "5.0.0-beta.17",
     "onborda": "^1.2.2",
     "react": "^18",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-hook-form-mantine": "^3.1.3",
