--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "blurhash": "^2.0.5",
     "blurhash-from-url": "^0.0.10",
+    "canvas": "^2.11.2",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
