fix: url with https

--- a/.env.example.qa
+++ b/.env.example.qa
@@ -9,7 +9,7 @@ NEXT_PUBLIC_SIGNOUT_TIME=10
 
 FERNET_KEY=joiyKed1p78GJQ-N2MtEdHfOZ8gzlxe4I7GEyoMTm1Q=
 
-AUTH_URL=http://qa-flowcraft.safwanet.com
+AUTH_URL=https://qa-flowcraft.safwanet.com
 AUTH_SECRET=LTkjH2OIdwkFOusCZ/zGMt+Mz3Q2pAd73mkG5GJxgpw=
 DRIZZLE_DATABASE_URI=mysql://admin_sync:password5678@safwa-qa-mysql80-v2.crlozpzigni5.ap-southeast-1.rds.amazonaws.com/schinkels
 DRIZZLE_DATABASE_HOST=safwa-qa-mysql80-v2.crlozpzigni5.ap-southeast-1.rds.amazonaws.com
